Fixes alignment to centre at mobile

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -127,6 +127,10 @@
     padding: 0;
     background-color: fade(@color-swatch2,40%);
 
+.flex-vert-center; // Mixin > Flexbox: Vertical Align Center Mixin
+-webkit-justify-content: center;
+justify-content: center;
+
     @media @tablet { width: 90%;}
 
     @media @mobile {
@@ -144,6 +148,12 @@
     padding: 10px 0;
     color: @bg-color;
     text-shadow: 2px 2px rgba(0,0,0,0.1);
+}
+
+.feature  .headline {
+    @media @mobile {
+        font-size: bkscale(@font-swatch8-font-size,0.8);
+    }
 }
 
 .feature  .button {
